# video-policy-checker

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
backend/data/regulations/: fda_off_label_promotion_policy.docx  ftc_endorsement_guidelines_pharma.txt  ich_e6_advertising_substantiation.docx  mlr_review_checklist.ppt  opdp_fair_balance_guidelines.txt  who_ethical_criteria_medicinal_drug_promotion.txt
backend/scripts/: document_ingester.py
backend/src/: config.py
backend/src/api/: server.py  telemetry.py
backend/src/graph/: nodes.py  state.py  workflow.py
backend/src/prompts/: pharma_doc_audit.txt  pharma_video_audit.txt
backend/src/services/: blob_service.py  db_service.py  doc_intel_service.py  llm_service.py  search_service.py  text_processor.py  video_indexer.py
backend/src/utils/: index.py
static/: script.js  style.css
templates/: index.html
